# D-BiCron

./: .env.example  .gitignore  CLAUDE.md  README.md  api_enrich_config.example.json  package-lock.json  package.json  pg2ch_config.example.json  pg2pg_config.example.json  pipeline_config.example.json  pipeline_config.json  pyproject.toml  requirements.txt  sync_config.example.json
.playwright-mcp/: page-2026-04-08T23-33-10-488Z.yml  page-2026-04-08T23-38-47-367Z.yml  page-2026-04-09T00-18-08-776Z.yml
dbcron/: config.py  db.py  main.py  scheduler.py
dbcron/jobs/: __init__.py  api_enrich.py  base.py  connection_test.py  fk_integrity.py  freshness_check.py  incremental_sync.py  metadata_snapshot.py  pg2ch_sync.py  pg2pg_sync.py  recommendation.py  schema_drift.py  table_profiler.py  team_vibe.py
dbcron/jobs/enrich/: __init__.py  context.py  exclusion.py  parallel.py  request_builder.py  response_parser.py  s3_loader.py  util.py  writer.py
dbcron/webui/: package.json  server.js
dbcron/webui/public/: canvas.js  index.html
manage_coredb/: config.py  db.py  main.py
manage_coredb/jobs/: __init__.py
manage_coredb/webui/: server.js
manage_coredb/webui/public/: index.html
scripts/: seed.py
tests/: conftest.py  test_api_enrich.py  test_base.py  test_canvas_layout.js  test_config.py  test_connection_test.py  test_db.py  test_enrich_context.py  test_enrich_exclusion.py  test_enrich_parallel.py  test_enrich_request.py  test_enrich_response.py  test_enrich_s3_loader.py  test_enrich_writer.py  test_freshness_check.py  test_incremental_sync.py  test_main.py  test_pg2ch_sync.py  test_pg2pg_sync.py  test_schema_drift.py  test_server_api.py  test_team_vibe.py
