[project]
name = "dbcron"
version = "0.1.0"
description = "coredb 주기적 관리용 cron job 플랫폼"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "httpx>=0.27",
    "apscheduler>=3.10",
    "python-dotenv>=1.0",
    "boto3>=1.42.85",
]

[project.scripts]
dbcron = "dbcron.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
